<resources>
    <string name="app_name">萌萌屋</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">1101896056521102</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCkbhp4P4AfTX2d2NNbTCm_wN7AhEhx_2M</string>

    <string name="bottom_sheet_customer_service_title">聯繫客服人員</string>

    <string name="congratulation">恭喜您！已成功完成購物！！</string>
    <string name="view_order">查看我的訂單</string>
    <string name="continue_shopping">繼續購物</string>

    <string name="update_hint">歡迎您前往google play<font color="red">下載更新</font>，若有任何問題可直接聯絡客服人員，我們會盡快為您處理！！</string>

    <string name="activity_query_post_orders_result_subtitle">查詢結果</string>
    <string name="cell_phone">手機電話</string>
    <string name="cell_phone_hint">請輸入訂購人手機電話</string>
    <string name="email">電子信箱</string>
    <string name="email_hint">請輸入訂購人電子信箱</string>
    <string name="submit">送出</string>
    <string name="choose_store">選擇配送門市</string>

    <string name="search_hint">搜尋您的萌萌商品</string>

    <string name="my_notification">我的通知</string>
    <string name="notification_empty_title">暫無通知</string>
    <string name="notification_empty_content">有重要訊息我們會立刻讓您知道！</string>

    <string name="product_style_dialog_no_stock_hint">請至\"我的收藏\"裡的\"補貨清單\"查看．</string>
    <string name="activity_past_orders_empty_title">尚無訂單資訊！</string>
    <string name="activity_past_orders_empty_content">趕快在萌萌屋尋找屬於您的萌萌商品吧！！</string>

    <string name="past_order_detail_cancel_order_item_title">取消訂單</string>

    <string name="dialog_stock_not_enough_login_message">
        已從您的訂單中移除，待補貨完成會再通知您！請至“我的收藏”裡的“補貨清單”查看．</string>
    <string name="dialog_stock_not_enough_not_login_message">已從您的訂單中移除，請再次確認您的訂單．</string>

    <string name="activity_main_navigation_my_mmw">我的萌萌屋</string>
    <string name="activity_main_navigation_my_collect_title">我的收藏</string>
    <string name="activity_main_navigation_my_shopping_points">我的購物金</string>
    <string name="activity_main_navigation_my_orders">我的訂單</string>
    <string name="activity_main_navigation_about_us">關於我們</string>
    <string name="activity_main_navigation_promotions">優惠活動</string>
    <string name="activity_main_navigation_customer_service_center">客服中心</string>
    <string name="activity_main_navigation_shopping_info">購物說明</string>
    <string name="activity_main_navigation_share_mmw">分享萌萌屋</string>
    <string name="activity_main_navigation_about_mmw">關於萌萌屋</string>
    <string name="activity_main_navigation_log_out">登出</string>

    <string name="activity_my_shopping_points_shopping_info">購物說明</string>

    <string name="dialog_delivery_store">超商-取貨付款</string>
    <string name="dialog_delivery_home">宅配-貨到付款</string>
    <string name="dialog_delivery_home_by_credit_card">宅配-信用卡付款</string>

</resources>
