<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/congratulation"
            android:textColor="@color/green_text"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="210dp"
            android:layout_height="144dp"
            android:layout_marginTop="18dp"
            android:src="@mipmap/img_gift" />

        <TextView
            android:id="@+id/activity_thank_you_message_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:textColor="@color/black_4a4a4a"
            android:textSize="14sp"
            tools:text="親愛的%s，非常感謝您在萌萌屋消費！\n此次購物明細已寄至您的信箱，
商品抵達您指定超商時，會有簡訊通知，\n還請您稍加留意！萌萌屋全體期待您再次光臨！！" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <Button
                style="@style/GreenButton"
                android:layout_width="0dp"
                android:layout_height="33dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:onClick="onViewOrderButtonClick"
                android:text="@string/view_order"
                android:textSize="14sp" />

            <Button
                style="@style/GreenButton"
                android:layout_width="0dp"
                android:layout_height="33dp"
                android:layout_weight="1"
                android:onClick="onContinueShoppingButtonClick"
                android:text="@string/continue_shopping"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>